
  [ Steve McIntyre ]
  * New upstream release fixing more bugs
  * Remove all our existing patches, no longer needed:
    + Make-sbat_var.S-parse-right-with-buggy-gcc-binutils.patch (now
      upstream)
    + Enable-NX.patch (we don't want NX just yet until the whole boot
      stack is NX-capable)
    + block-grub-sbat3-debian.patch (not needed now upstream grub SBAT
      is 4)

 -- Steve McIntyre <93sam@debian.org>  Sun, 05 May 2024 00:02:51 +0100

shim (15.7-1~deb10u1) buster-security; urgency=medium

  * New upstream release fixing more bugs
  * Add further patches from upstream:
    + Make sbat_var.S parse right with buggy gcc/binutils
    + Enable NX support at build time, as required by policy for signing
      new shim binaries.
  * Block Debian grub binaries with sbat < 4 (see #1024617)
  * Rebuild for buster
    + Add patches reverting arm64 build system changes so we can
      build using older binutils.

 -- Steve McIntyre <93sam@debian.org>  Tue, 31 Jan 2023 10:41:03 +0100

shim (15.6-1~deb10u1) buster; urgency=medium

  * New upstream release fixing more bugs
    + Remove all our old patches, all now upstream:
      - fix-32b-format-strings.patch
      - fix-test-includes.patch
  * Rebuild for buster
    + Add new patches reverting arm64 build system changes so we can
      build using older binutils.

 -- Steve McIntyre <93sam@debian.org>  Thu, 28 Jul 2022 07:46:16 +0100

shim (15.4-7~deb10u1) buster; urgency=high

  * Tweak how we call grub-install; don't abort on error. Not ideal
    behaviour either, but don't break upgrades. Copy the behaviour
    from the grub packages here. Bug #990966

 -- Steve McIntyre <93sam@debian.org>  Mon, 12 Jul 2021 08:59:53 +0100

shim (15.4-6~deb10u1) buster; urgency=high

  * Add arm64 patch to tweak section layout and stop crashing
    problems. Upstream issue #371. Closes: #990082, #990190
  * In insecure mode, don't abort if we can't create the MokListXRT