@@ -10,6 +10,7 @@ shim (15.8-1~deb10u1) UNRELEASED; urgency=medium
       stack is NX-capable)
     + block-grub-sbat3-debian.patch (not needed now upstream grub SBAT
       is 4)
+  * Log if the build is nx-compatible or not
 
  -- Steve McIntyre <93sam@debian.org>  Sun, 05 May 2024 00:02:51 +0100
 
